- Symbols made case insensitive (MCC_BWin).
- (confirm) non numerical user levels allowed (MCC_DateString and MCC_DateText).

0.1.0-alpha.32:
===============
- (askchoice) empty choices fixed.
- Italian translation (Samir Hawamdeh).
- LANGUAGE tooltype promoted to @language.
- (copyfiles) directory (choices) fix.
- Default (exit) fix.
- Parent (tackon) fix.
- Improved UX - activate default buttons (polluks).

0.1.0-alpha.33:
===============
- Improved robustness.
- Fixed handling of non-integers.
- (getdiskspace) v44 compliant (WHDLOpener).
- (trace) implemented (v44).
- (retrace) implemented (v44).
- (openwbobject) implemented (v44).
- (showwbobject) implemented (v44).
- (closewbobject) implemented (v44).
- (reboot) implemented (v44).
- (copyfiles) (back) option implemented (v44).
- (copylib) (back) option implemented (v44).
- (delete) (back) option implemented (v44).
- (execute) (back) option implemented (v44).
- (makedir) (back) option implemented (v44).
- (message) (back) option implemented (v44).
- (rename) (back) option implemented (v44).
- (textfile) (back) option implemented (v44).
- (askdir) (back) option implemented (v44).
- (askfile) (back) option implemented (v44).
- (askstring) (back) option implemented (v44).
- (asknumber) (back) option implemented (v44).
- (askchoice) (back) option implemented (v44).
- (askoptions) (back) option implemented (v44).
- (askbool) (back) option implemented (v44).
- (askdisk) (back) option implemented (v44).

0.1.0-alpha.34:
===============
- (effect) partial (no radial / position) implementation (v44).
- (showmedia) partial implementation (image support) (v44).
- (closemedia) implemented (v44).
- (tackon) parent fix (WormWars).
- @installer-version bumped from 43.3 to 44.10

0.1.0-alpha.35:
===============
- Improved robustness.
- Local variables handling / recursion fix.
- File permission workaround / cheat.
- (exists) support undocumented (quiet) == (noreq) (CubicIDE_HW80).

0.1.0-alpha.36:
===============
- ?