@@ -23,6 +23,6 @@ entry_p m_getsum(entry_p contxt);
 entry_p m_getversion(entry_p contxt);
 entry_p m_iconinfo(entry_p contxt);
 
-int h_getversion(entry_p contxt, const char *name);
+int h_getversion_file(const char *name);
 
 #endif
